--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Mali';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: Mali;
+  src: url(assets/fonts/Mali-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Mali-ExtraLight;
+  src: url(assets/fonts/Mali-ExtraLight.ttf);
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: Mali-Light;
+  src: url(assets/fonts/Mali-Light.ttf);
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: Mali-Medium;
+  src: url(assets/fonts/Mali-Light.ttf);
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Mali-SemiBold;
+  src: url(assets/fonts/Mali-SemiBold.ttf);
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Mali-Bold;
+  src: url(assets/fonts/Mali-Bold.ttf);
+  font-weight: 700;
 }
