Add menu visuals

--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,48 @@
 :root {
-  --COLOR_GOLD: rgba(184, 161, 48, 1);
-  --COLOR_WHITE: rgba(255, 255, 255, 1);
-  --COLOR_BLACK: rgba(0, 0, 0, 1);
+  --COLOR-GOLD: rgba(184, 161, 48, 1);
+  --COLOR-DARK_GOLD: rgba(125, 105, 10, 1);
+  --COLOR-WHITE: rgba(255, 255, 255, 1);
+  --COLOR-BLACK: rgba(0, 0, 0, 1);
+  --COLOR-LIGHT_BLACK: rgba(26, 26, 26, 1);
+  --COLOR-GRAY: rgba(56, 56, 56, 1);
 
-  --TEXT_BIG: 50px;
-  --TEXT_REGULAR: 30px;
-  --TEXT_SMALL: 25px;
-  --TEXT_SMALLEST: 20px;
+  --TEXT-BIG: 22px;
+  --TEXT-REGULAR: 15px;
+  --TEXT-SMALL: 12px;
+  --TEXT-SMALLEST: 5px;
 
-  --BORDER-RADIUS_BIG: 30px;
-  --BORDER-RADIUS_REGULAR: 15px;
-  --BORDER-RADIUS_SMALL: 10px;
-  --BORDER-RADIUS_SMALLEST: 5px;
+  --BORDER_RADIUS-BIG: 30px;
+  --BORDER_RADIUS-REGULAR: 15px;
+  --BORDER_RADIUS-SMALL: 10px;
+  --BORDER_RADIUS-SMALLEST: 5px;
 }
 
 body {
-  margin: 0;
+  margin: 1vw;
   font-family: 'Mali';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
 }
 
 @font-face {
