--- a/src/screens/Home/styles.css
+++ b/src/screens/Home/styles.css
@@ -1,22 +1,23 @@
 .home-container {
-  margin-top: 1.5vw;
-  overflow-x: hidden;
+  margin-top: 2vw;
+  overflow: hidden;
 }
 
 .home-textImageContainer {
-  display: flex;
-  flex: 1;
-  justify-content: center;
+  position: relative;
 }
 
 .home-textImage {
   position: absolute;
-  padding-top: 10rem;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 99;
   font-size: var(--TEXT-BIGGEST);
   color: var(--COLOR-WHITE);
-  z-index: 99;
-  text-align: center;
   line-height: 1.5em;
+  width: 100%;
 }
 
 .home-backgroundImage {
@@ -32,10 +33,17 @@
   object-fit: cover;
 }
 
+.home-cards {
+  margin: 4vw 0 4vw 0;
+  display: flex;
+  flex: 1;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+
 @media (max-width: 767px) {
   .home-textImage {
     font-size: var(--TEXT-BIG);
-    padding-top: 5rem;
   }
 
   .home-backgroundImage {
