--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --COLOR-SHADOW: rgba(0, 0, 0, 0.2);
 
   --TEXT-BIGGEST: 40px;
+  --TEXT-VERY_BIG: 30px;
   --TEXT-BIG: 22px;
   --TEXT-REGULAR: 15px;
   --TEXT-SMALL: 12px;
