--- a/src/screens/Home/styles.css
+++ b/src/screens/Home/styles.css
@@ -33,8 +33,19 @@
   object-fit: cover;
 }
 
-.home-cards {
+.home-whatWeOffer {
   margin: 4vw 0 4vw 0;
+}
+
+.home-whatWeOfferTitle {
+  font-family: 'Mali-Bold';
+  font-size: var(--TEXT-BIGGEST);
+  color: var(--COLOR-GOLD);
+  margin-left: 13.5vw;
+  margin-bottom: 4vw;
+}
+
+.home-cards {
   display: flex;
   flex: 1;
   justify-content: space-evenly;
@@ -48,5 +59,10 @@
 
   .home-backgroundImage {
     height: 16rem;
+  }
+
+  .home-whatWeOfferTitle {
+    font-size: var(--TEXT-BIG);
+    margin-left: 6.5vw;
   }
 }
