--- a/src/screens/Products/styles.css
+++ b/src/screens/Products/styles.css
@@ -5,11 +5,18 @@
   align-items: center;
 }
 
+.products-container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  margin-top: 2vw;
+  margin-left: 2vw;
+}
+
 .products-productsList {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   row-gap: 4vw;
   column-gap: 4vw;
   justify-items: center;
-  margin: 0 4vw;
+  margin: 0 4vw 0 1.5vw;
 }
