--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --TEXT-BIGGEST: 40px;
   --TEXT-VERY_BIG: 30px;
   --TEXT-BIG: 22px;
+  --TEXT-MEDIUM: 18px;
   --TEXT-REGULAR: 15px;
   --TEXT-SMALL: 12px;
   --TEXT-SMALLEST: 5px;
