--- a/src/screens/Products/styles.css
+++ b/src/screens/Products/styles.css
@@ -20,3 +20,14 @@
   justify-items: center;
   margin: 0 4vw 0 1.5vw;
 }
+
+@media (max-width: 767px) {
+  .products-container {
+    grid-template-columns: 1fr;
+  }
+
+  .products-productsList {
+    row-gap: 8vw;
+    margin: 0;
+  }
+}
