Add basic Cart page structure
Also add CartTable component and toasts package

--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -63,3 +63,8 @@
   width: 15px;
   height: 15px;
 }
+
+.productCard-toaster {
+  font-family: 'Mali-SemiBold';
+  color: var(--COLOR-LIGHT_BLACK);
+}
